@@ -6,5 +6,8 @@
 #
 # Please keep the list sorted.
 
+Anup Kodlekere <anup.kodlekere@ibm.com>
 Jan Mercl <0xjnml@gmail.com>
 Steffen Butzer <steffen(dot)butzer@outlook.com>
+ZHU Zijia <piggynl@outlook.com>
+Gleb Sakhnov <gleb.sakhnov@gmail.com>
