@@ -1,6 +1,7 @@
 1.10.2
 * Client: fixed a bug that was aborting chain sync when a peer sent a corrupt block
 * Client: Removed config value "CFG.Stat.BSizeBlks" (replaced with a constant)
+* Lib: Updated "lib/others/memory" to the recent version from "gitlab.com/cznic/memory" (old one could crash)
 
 1.10.1 - 2022-06-15
 * btc.VerifyKeyPair() alos does Schnorr sign/verify on the given key pair
